--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Irene's portfolio</title>
+      <link rel="icon" type="image/x-icon" href="cursor1.png">
       <meta name="author" content="Irene Camanes">
       <link rel='stylesheet' type='text/css' href='styles.css'>
 
